# spring-portal

./: .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  stack.env
db/migrations/: 001_init.sql  002_flow.sql  003_aggregates.sql  004_events.sql  005_baro.sql
grafana/dashboards/: 01_overview.json  02_spring_science.json  03_station_health.json  04_imu.json
grafana/provisioning/dashboards/: provider.yml
grafana/provisioning/datasources/: datasource.yml
portal/: __init__.py  baro.py  cli.py  db.py  flow.py  formats.py  load.py  migrate.py  station.py  weather.py
scheduler/: crontab
scripts/: export_dashboards.py
